# my-no-sql-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  readme.md
.github/workflows/: release.yml
files/: app.css  app.js
src/: app_ctx.rs  main.rs  settings_model.rs  static_resources.rs  ui_command.rs
src/actions/: get_list_of_partition.rs  get_list_of_rows.rs  get_list_of_tables.rs  mod.rs
src/elements/: left_panel.rs  mod.rs  right_panel.rs
src/states/: env_list_state.rs  global_state.rs  loaded_partitions.rs  loaded_rows.rs  mod.rs  right_panel_state.rs  selected_table.rs  tables.rs  tables_list.rs
src/views/: env_list.rs  left_panel.rs  mod.rs  right_panel.rs
src/views/dialog/: render.rs
