[package]
name = "my-no-sql-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "*"


dioxus-desktop = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
futures = "*"
my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git" }
flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }

lazy_static = "*"

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
